--- a/src/styles/utilities.scss
+++ b/src/styles/utilities.scss
@@ -38,6 +38,7 @@
 
 .textLight {
   @extend .text;
+  white-space: nowrap;
   color: var(--appBColor1);
 }
 
